@@ -18,22 +18,19 @@
  */
 package org.apache.accumulo.server.manager.state;
 
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
-import org.apache.accumulo.core.client.admin.TabletHostingGoal;
 import org.apache.accumulo.core.clientImpl.ClientContext;
+import org.apache.accumulo.core.manager.state.TabletManagement;
+import org.apache.accumulo.core.manager.state.TabletManagement.ManagementAction;
 import org.apache.accumulo.core.metadata.RootTable;
 import org.apache.accumulo.core.metadata.TServerInstance;
-import org.apache.accumulo.core.metadata.TabletLocationState;
 import org.apache.accumulo.core.metadata.schema.Ample;
 import org.apache.accumulo.core.metadata.schema.Ample.ReadConsistency;
 import org.apache.accumulo.core.metadata.schema.TabletMetadata;
-import org.apache.accumulo.core.metadata.schema.TabletMetadata.Location;
-import org.apache.accumulo.core.metadata.schema.TabletMetadata.LocationType;
 import org.apache.hadoop.fs.Path;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -42,16 +39,14 @@ class ZooTabletStateStore extends AbstractTabletStateStore implements TabletStat
 
   private static final Logger log = LoggerFactory.getLogger(ZooTabletStateStore.class);
   private final Ample ample;
-  private final ClientContext context;
 
   ZooTabletStateStore(ClientContext context) {
     super(context);
-    this.context = context;
     this.ample = context.getAmple();
   }
 
   @Override
-  public ClosableIterator<TabletLocationState> iterator() {
+  public ClosableIterator<TabletManagement> iterator() {
 
     return new ClosableIterator<>() {
       boolean finished = false;
@@ -62,41 +57,10 @@ class ZooTabletStateStore extends AbstractTabletStateStore implements TabletStat
       }
 
       @Override
-      public TabletLocationState next() {
+      public TabletManagement next() {
         finished = true;
-        try {
-
-          TabletMetadata rootMeta = ample.readTablet(RootTable.EXTENT, ReadConsistency.EVENTUAL);
-
-          Location currentSession = null;
-          Location futureSession = null;
-          Location lastSession = null;
-
-          Location loc = rootMeta.getLocation();
-
-          if (loc != null && loc.getType() == LocationType.FUTURE) {
-            futureSession = loc;
-          }
-
-          if (rootMeta.getLast() != null) {
-            lastSession = rootMeta.getLast();
-          }
-
-          if (loc != null && loc.getType() == LocationType.CURRENT) {
-            currentSession = loc;
-          }
-
-          List<Collection<String>> logs = new ArrayList<>();
-          rootMeta.getLogs().forEach(logEntry -> {
-            logs.add(Collections.singleton(logEntry.filename));
-            log.debug("root tablet log {}", logEntry.filename);
-          });
-
-          return new TabletLocationState(RootTable.EXTENT, futureSession, currentSession,
-              lastSession, null, logs, false, TabletHostingGoal.ALWAYS, false);
-        } catch (Exception ex) {
-          throw new RuntimeException(ex);
-        }
+        TabletMetadata tm = ample.readTablet(RootTable.EXTENT, ReadConsistency.EVENTUAL);
+        return new TabletManagement(Set.of(ManagementAction.NEEDS_LOCATION_UPDATE), tm);
       }
 
       @Override
@@ -132,18 +96,18 @@ class ZooTabletStateStore extends AbstractTabletStateStore implements TabletStat
     super.setLocations(assignments);
   }
 
-  private static void validateTablets(Collection<TabletLocationState> tablets) {
+  private static void validateTablets(Collection<TabletMetadata> tablets) {
     if (tablets.size() != 1) {
       throw new IllegalArgumentException("There is only one root tablet");
     }
-    TabletLocationState tls = tablets.iterator().next();
-    if (tls.extent.compareTo(RootTable.EXTENT) != 0) {
+    TabletMetadata tm = tablets.iterator().next();
+    if (tm.getExtent().compareTo(RootTable.EXTENT) != 0) {
       throw new IllegalArgumentException("You can only store the root tablet location");
     }
   }
 
   @Override
-  public void unassign(Collection<TabletLocationState> tablets,
+  public void unassign(Collection<TabletMetadata> tablets,
       Map<TServerInstance,List<Path>> logsForDeadServers) throws DistributedStoreException {
     validateTablets(tablets);
 
@@ -153,7 +117,7 @@ class ZooTabletStateStore extends AbstractTabletStateStore implements TabletStat
   }
 
   @Override
-  public void suspend(Collection<TabletLocationState> tablets,
+  public void suspend(Collection<TabletMetadata> tablets,
       Map<TServerInstance,List<Path>> logsForDeadServers, long suspensionTimestamp)
       throws DistributedStoreException {
     validateTablets(tablets);
@@ -161,13 +125,13 @@ class ZooTabletStateStore extends AbstractTabletStateStore implements TabletStat
   }
 
   @Override
-  protected void processSuspension(Ample.ConditionalTabletMutator tabletMutator,
-      TabletLocationState tls, long suspensionTimestamp) {
+  protected void processSuspension(Ample.ConditionalTabletMutator tabletMutator, TabletMetadata tm,
+      long suspensionTimestamp) {
     // No support for suspending root tablet, so this is a NOOP
   }
 
   @Override
-  public void unsuspend(Collection<TabletLocationState> tablets) {
+  public void unsuspend(Collection<TabletMetadata> tablets) {
     // no support for suspending root tablet.
   }
 
